css/style.css
/*******************************************************************************
Slate Theme for GitHub Pages
by Jason Costello, @jsncostello
*******************************************************************************/

@import url(pygment_trac.css);

/*******************************************************************************
MeyerWeb Reset
*******************************************************************************/

* {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  vertical-align: baseline;
  box-sizing: inherit;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

ol, ul {
  list-style: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

/*******************************************************************************
Theme Styles
*******************************************************************************/

html {
  height: 100%;
  min-height: 100vh;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  box-sizing: border-box;
}

body {
  height: 100%;
  color: #373737;
  background: #fafacf;
  font-size: 16px;
  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  display: grid;
  grid-template-rows: auto 1fr auto;
}
body.wiki-index-html {
  /* hack */
  background: #ffffff;
}

h1, h2, h3, h4, h5, h6 {
  margin-block: 0.8rem;
  font-weight: 600;
  color: #222222;
  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
  letter-spacing: -1px;
}

h1 {
  font-size: 2em;
  font-weight: 700;
}

h2 {
  font-size: 1.8em;
  padding-bottom: 10px;
  background: url('../images/bg_hr.png') repeat-x bottom;
}

h3 {
  font-size: 1.5em;
}

h4 {
  font-size: 1.2em;
}

h5 {
  font-size: 1em;
}

h6 {
  font-size: 0.8em;
}

p {
  margin-block: 0.625em;
}

a {
  text-decoration: none;
  color: #007edf;
}

a:hover, a:focus {text-decoration: underline;}

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

img:not(.img-no-styling) {
  position: relative;
  margin: 0 auto;
  max-width: 739px;
  padding: 5px;
  margin: 10px 0 10px 0;
  border: 1px solid #ebebeb;

  -ms-box-shadow: 0 0 5px #ebebeb;
  -moz-box-shadow: 0 0 5px #ebebeb;
  -o-box-shadow: 0 0 5px #ebebeb;
  -webkit-box-shadow: 0 0 5px #ebebeb;
  box-shadow: 0 0 5px #ebebeb;
}

p img {
  display: inline;
  margin: 0;
  padding: 0;
  vertical-align: middle;
  text-align: center;
  border: none;
}

pre, code {
  width: 100%;
  color: #222;
  background-color: #fff;

  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  font-size: 0.8em;

  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border-radius: 2px;
}

pre {
  width: 100%;
  padding: 10px;
  box-shadow: 0 0 10px rgba(0,0,0,.1);
  overflow: auto;
}

code {
  padding: 3px;
  margin: 0 3px;
  box-shadow: 0 0 10px rgba(0,0,0,.1);
}

pre code {
  display: block;
  box-shadow: none;
}

blockquote {
  color: #666;
  margin-bottom: 20px;
  padding: 0 0 0 20px;
  border-left: 3px solid #bbb;
}

:not(li) > ul, ol, dl { /* HACK */
  margin-bottom: 15px
}

ul {
  list-style-position: inside;
  list-style: disc;
  padding-left: 20px;
}

ol {
  list-style-position: inside;
  list-style: decimal;
  padding-left: 20px;
}

dl dt {
  font-weight: bold;
}

dl dd {
  padding-left: 20px;
  font-style: italic;
}

dl p {
  padding-left: 20px;
  font-style: italic;
}

hr {
  height: 1px;
  margin-bottom: 5px;
  border: none;
  background: url('../images/bg_hr.png') repeat-x center;
}

table {
  border: 1px solid #373737;
  margin-bottom: 1.25em;
  text-align: left;
}

th {
  font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  padding: 10px;
  background: #373737;
  color: #fff;
}

td {
  padding: 10px;
  border: 1px solid #373737;
}

form {
  background: #f2f2f2;
  padding: 20px;
}

header {
  background: #333399;
  background: -moz-linear-gradient(top, #373737, #333399);
  background: -webkit-linear-gradient(top, #373737, #333399);
  background: -ms-linear-gradient(top, #373737, #333399);
  background: -o-linear-gradient(top, #373737, #333399);
  background: linear-gradient(to bottom, #373737, #333399);
  margin: 0;
  padding: 1.25em 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 2em;
}

header > * {
  vertical-align: middle;
}

header > :nth-child(1) {
  text-align: center;
}
header > :nth-child(1) a:has(#dosbox-x-logo) {
  display: block;
}
header > :nth-child(1) #dosbox-x-logo {
  width: 5.625em;
  height: auto;
  margin: auto;
  vertical-align: middle;
}

header > :nth-child(2) > * {
  margin: 0;
  background: none;
  text-shadow: #111 0px 0px 10px;
  letter-spacing: -1px;
  line-height: 1.25;
}
header > :nth-child(2) * {
  color: #fff;
}
header > :nth-child(2) > :last-child {
  padding-bottom: 0;
}

#project_tagline {
  font-size: 1.5em;
  font-weight: 300;
}
@media (max-width: 560px) {
  #project_tagline {
    display: none;
  }
}

hr.content-sep {
  height: 1px;
  margin: 0;
  border: none;
  background: #111;
}

#main_content {
  margin: 1em auto;
  width: 90%;
  max-width: 62.5em;
}

.align-center,
table.align-center,
table.align-center > thead > tr > th,
table.align-center > tbody > tr > td,
.index-demos > thead > tr > th,
.index-demos > tbody > tr > td {
  text-align: center;
}
.index-demos > thead > tr > th,
.index-demos > tbody > tr > td {
  vertical-align: middle;
}

article,
.align-left,
table.align-left > thead > tr > th,
table.align-left > tbody > tr > td {
  text-align: left;
}

#main_header {
  text-align: center;
  margin-bottom: 0.625em;
}
#main_header p {
  font-size: 1.125em;
  margin-block: 0.3125em;
}

.index-flex {
  margin: 0 !important;
  margin-bottom: 15px !important;
  width: 100% !important;
  max-width: 100% !important;
  display: flex;
  justify-content: space-between;
  text-align: left;
  padding: 0 0.8em;
  gap: 0.5em;
}
.index-flex > :nth-child(1) {
  order: 2;
  flex: 1 1 80%;
}
.index-flex > :nth-child(2) {
  order: 1;
  flex: 0 1 20%;
}
@media (max-width: 720px) {
  .index-flex {
    flex-direction: column;
  }
  .index-flex > :nth-child(1) {
    order: 1;
  }
  .index-flex > :nth-child(2) {
    order: 2;
  }
}

.subtitle-mute {
  font-size: 1em;
  color: grey;
}

.index-demos:first-of-type {
  margin-bottom: 10px;
}
.index-demos, .index-demos > tbody > tr > td {
  border: none;
}
.index-demos > thead > tr > th {
  background: none;
}
.index-demos > thead > tr > th,
.index-demos > tbody > tr > td {
  padding: 0;
  width: calc(100%/3);
}

.home-links {
  border: none;
  margin: 0 auto;
  margin-block: 1em;
  border-collapse: separate;
  border-spacing: 0.625em 0;
}
.home-links > thead {
  display: none;
}
.home-links > tbody > tr > td {
  padding: 0;
  border: 0;
  border-radius: 2px;
  box-shadow: 0 0 5px rgba(0,0,0,.5);
  vertical-align: middle;
}
.home-links > tbody > tr > td * {
  color: #fff;
  font-weight: 700;
  text-align: center;
}
.home-links > tbody > tr > td > a {
  display: flex;
  height: 100%;
  padding: 0.5em 1em;
  gap: 0.75em;
  flex-wrap: wrap;
  justify-content: center;
}
.home-links > tbody > tr > td > a img {
  height: 1.5em;
  width: auto;
  padding: 0;
}

.home-links > tbody > tr > td:has(#linkwiki) {
  background-color: green;
}
.home-links > tbody > tr > td:has(#linktracker) {
  background-color: purple;
}
.home-links > tbody > tr > td:has(#linkproject) {
  background-color: #0090ff;
}

h4.release-date {
  font-weight: normal;
}
.latest-release-text {
  color: red;
}
.release-date-text {
  color: green;
}

html:has(.wiki-index-html),
.wiki-index-html {
  width: 100%; height: 100%;
}
.wiki-index-html nav {
  background-color: #F8F8F7;
  padding: 0.5em 1em;
  font-weight: bold;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
}
.wiki-index-html nav > span {
  display: inline-block;
  flex-basis: calc(100% / 3);
}
.wiki-index-html nav > span:nth-child(1) { text-align: left; }
.wiki-index-html nav > span:nth-child(2) { text-align: center; }
.wiki-index-html main {
  position: relative;
}
.wiki-index-html main > iframe {
  display: block;
}
#wiki-try-reloading {
  position: absolute;
  top: 50%; left: 50%;
  transform: translate(-50%, -50%);
  text-align: center; vertical-align: middle;
  z-index: -1;
  color: #555; opacity: 0.8;
}

#builds {
  width: 100%;
}
.devel-builds-dots {
  margin: auto;
}

footer {
  background: #000066;
  text-align: center;
  padding: 5px 10px;
}

footer p {
  color: #f2f2f2;
}

footer a {
  color: #F2F2F2;
  text-decoration: underline;
}

sup {
  vertical-align: super;
  font-size: smaller;
}

.version-sidebar {
  font-weight: bold;
  letter-spacing: -0.25px;
}
.version-sidebar h4 img {
  display: inline-block;
  vertical-align: middle;
  width: 2em; height: auto;
  margin: 0.25em; margin-left: 0;
}

